--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,4 +4,9 @@
   <title>{{ page.title }} - {{site.title}}</title>
   <link href="//fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
