--- a/_includes/nav-home.html
+++ b/_includes/nav-home.html
@@ -1,7 +1,7 @@
 <div class="row">
     <nav>
             <ul class="nav-ul">
-              <li class="link"><a href="{{site.baseurl}}/">Home</a></li>
+              <li class="link"><a href="{{site.baseurl}}/">accueil</a></li>
               <li class="link"><a href="{{site.baseurl}}/about/">à propos</a></li>
               <li class="link"><a href="{{site.baseurl}}/archive/">Archive</a></li>
               <li class="dropdown link">
