--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 <div class="row head-row">
      <header class="header twelve columns" style="background-image: url({{site.baseurl}}/img/paper-15.png);background-image: url({{site.baseurl}}/img/paper-15.png),linear-gradient(120deg, #f1dc48, #cc274d);">
         <a href="{{site.baseurl}}/"><h1 class="headline">{{site.title}}</h1></a>
+        {% if site.subtitle %}<h2 class="headline" style="font-size: 30px; text-align: right; margin-right: 0.5em">{{site.subtitle}}</h2>{% endif %}
      </header>
  </div>
 {% include nav-home.html %}
