--- a/_includes/nav-home.html
+++ b/_includes/nav-home.html
@@ -3,16 +3,18 @@
             <ul class="nav-ul">
               <li class="link"><a href="{{site.baseurl}}/">accueil</a></li>
               <li class="link"><a href="{{site.baseurl}}/about/">à propos</a></li>
-              <li class="link"><a href="{{site.baseurl}}/archive/">Archive</a></li>
+              <!--
+              <li class="link"><a href="{{site.baseurl}}/archive/">archive</a></li>
               <li class="dropdown link">
-                <a href="#" class="dropbtn">Dropdown ↓</a>
+                <a href="#" class="dropbtn">dropdown ↓</a>
                 <div class="dropdown-content">
                   <a href="#">Link 1</a>
                   <a href="#">Link 2</a>
                   <a href="#">Link 3</a>
                 </div>
               </li>
-            <li class="link"><a href="{{site.baseurl}}/contact/">Contact</a></li>
+              -->
+            <li class="link"><a href="{{site.baseurl}}/contact/">contact</a></li>
             </ul>
     </nav>
 </div>
