--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer>
 <div class="container">
     <div class="row">
+            <div class="four columns">Tous droits réservés</div>
             <div class="four columns">{{site.title}}</div>
-            <div class="four columns">Designed by <a href="http://webjeda.com">Webjeda</a></div>
-            <div class="four columns">All rights reserved</div>
+            <div class="four columns">création du thème: <a href="http://webjeda.com">webjeda</a></div>
         </div>
 </div>
 </footer>
