--- a/_includes/nav-page.html
+++ b/_includes/nav-page.html
@@ -2,7 +2,8 @@
     <nav>
             <ul class="nav-ul">
               <li class="link" style="background-color: #37c376"><a href="{{site.baseurl}}/">{{site.title}}</a></li>
-              <li class="link"><a href="{{site.baseurl}}/about/">About</a></li>
+              <li class="link"><a href="{{site.baseurl}}/about/">à propos</a></li>
+              <!--
               <li class="link"><a href="{{site.baseurl}}/archive/">Archive</a></li>
               <li class="dropdown link">
                 <a href="#" class="dropbtn">Dropdown ↓</a>
@@ -12,8 +13,9 @@
                   <a href="#">Link 3</a>
                
                 </div>
-              </li>
-               <li class="link"><a href="{{site.baseurl}}/contact/">Contact</a></li>
+               </li>
+               -->
+               <li class="link"><a href="{{site.baseurl}}/contact/">contact</a></li>
             </ul>
     </nav>
 </div>
