--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
 <div class="container">
     <div class="row">
-            <div class="four columns">Tous droits réservés</div>
+            <div class="four columns">tous droits réservés</div>
             <div class="four columns">{{site.title}}</div>
             <div class="four columns">création du thème: <a href="http://webjeda.com">webjeda</a></div>
         </div>
