nouvelle tentative pour le bandeau

--- a/css/main.scss
+++ b/css/main.scss
@@ -48,4 +48,8 @@ $on-laptop:        1000px;
         "custom"
 ;
 
-
+h2.headline b {
+    font-weight: normal;
+    text-transform: uppercase;
+    color: #DDFFFF;
+}
