--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,13 @@
 <div class="container bg">
 <div class="row head-row">
      <header class="header twelve columns" style="background-image: url({{site.baseurl}}/img/paper-15.png);background-image: url({{site.baseurl}}/img/paper-15.png),linear-gradient(120deg, #f1dc48, #cc274d);">
+        <!--
         <a href="{{site.baseurl}}/"><h1 class="headline">{{site.title}}</h1></a>
         {% if site.subtitle %}<h2 class="headline" style="font-size: 30px; text-align: right; margin-right: 0.5em">{{site.subtitle}}</h2>{% endif %}
+        -->
+        <a href="{{site.baseurl}}/"><h1 class="headline" style=""font-size: "35px">Joel Gronfier</h1></a>
+        <h2 class="headline" style="font-size: 30px; text-align: right; margin-right: 0.5em">
+        <b>Ac</b>compagnement <b>a</b>u <b>dé</b>veloppement</h2>
      </header>
  </div>
 {% include nav-home.html %}
