--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,6 +1,9 @@
 
 h2.headline b {
-    font-weight: normal;
+    /*
     text-transform: uppercase;
     color: #DDFFFF;
+    */
+    text-decoration: underline;
+    
 }
