--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,12 @@
         <a href="{{site.baseurl}}/"><h1 class="headline">{{site.title}}</h1></a>
         {% if site.subtitle %}<h2 class="headline" style="font-size: 30px; text-align: right; margin-right: 0.5em">{{site.subtitle}}</h2>{% endif %}
         -->
-        <a href="{{site.baseurl}}/"><h1 class="headline" style="font-size: 70px">Joël Gronfier</h1></a>
-        <h2 class="headline" style="font-size: 30px; text-align: right; margin-right: 0.5em">
-        <b>Ac</b>compagnement <b>a</b>u <b>dé</b>veloppement</h2>
+        <a href="{{site.baseurl}}/">
+          <h1 class="headline" style="font-size: 70px">Joël Gronfier</h1>
+          <h2 class="headline" style="font-size: 30px; text-align: right; margin-right: 0.5em">
+            <b>Ac</b><b>compagnement  </b><b>a</b><b>u  </b><b>dé</b><b>veloppement</b>
+          </h2>
+        </a>
      </header>
  </div>
 {% include nav-home.html %}
