--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,9 +1,15 @@
 
-h2.headline b {
-    /*
-    text-transform: uppercase;
-    color: #DDFFFF;
-    */
+h2.headline > * {
+    display: inline-block;
+    transition: all 0.5s ease;
+    font-weight: inherit;
+}
+
+h2.headline > :nth-child(2n+1) {
     text-decoration: underline;
-    
+}
+
+.head-row:hover h2.headline > :nth-child(2n) {
+    font-size: 0;
+    opacity: 0;
 }
