--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -4,7 +4,7 @@
 }
  */
 body {
-    background-color: #fefefe;
+    background: radial-gradient(darkgray, black);
 }
 
 /* Main container */
@@ -259,8 +259,7 @@ pre {
 
 
 .bg {
-    box-shadow: 0 0 4px #ddd;
-     background: #fbff0b; /* fallback for old browsers */
+    background: #fbff0b; /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #fbff0b , #DD2476); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #fbff0b , #DD2476); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
