adapté le bandeau aux petits écrans

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,19 @@
 ---
 ---
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 {% include head.html %}
 <body>
 <div class="container bg">
 <div class="row head-row">
-     <header class="header twelve columns" style="background-image: url({{site.baseurl}}/img/paper-15.png);background-image: url({{site.baseurl}}/img/paper-15.png),linear-gradient(120deg, #f1dc48, #cc274d);">
+     <header class="frontpage header twelve columns" style="background-image: url({{site.baseurl}}/img/paper-15.png);background-image: url({{site.baseurl}}/img/paper-15.png),linear-gradient(120deg, #f1dc48, #cc274d);">
         <!--
         <a href="{{site.baseurl}}/"><h1 class="headline">{{site.title}}</h1></a>
         {% if site.subtitle %}<h2 class="headline" style="font-size: 30px; text-align: right; margin-right: 0.5em">{{site.subtitle}}</h2>{% endif %}
         -->
         <a href="{{site.baseurl}}/">
-          <h1 class="headline" style="font-size: 70px">Joël Gronfier</h1>
-          <h2 class="headline" style="font-size: 30px; text-align: right; margin-right: 0.5em">
+          <h1 class="headline">Joël Gronfier</h1>
+          <h2 class="headline">
             <b>Ac</b><b>compagnement  </b><b>a</b><b>u  </b><b>dé</b><b>veloppement</b>
           </h2>
         </a>
