--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,15 +1,42 @@
+.frontpage.header h1.headline {
+    font-size: 70px;
+    transition: font-size 0.5s ease;
+}
 
-h2.headline > * {
+.frontpage.header h2.headline {
+    font-size: 30px;
+    text-align: right;
+    margin-right: 0.5em
+}
+
+.frontpage.header h2.headline > * {
     display: inline-block;
     transition: all 0.5s ease;
     font-weight: inherit;
 }
 
-h2.headline > :nth-child(2n+1) {
+.frontpage.header h2.headline > :nth-child(2n+1) {
     text-decoration: underline;
 }
 
 .head-row:hover h2.headline > :nth-child(2n) {
     font-size: 0;
     opacity: 0;
+}
+
+@media (max-width:700px) {
+    .frontpage.header h1.headline {
+        font-size: 40px;
+    }
+    
+    .frontpage.header h2.headline {
+        font-size: 30px;
+        text-align: right;
+        margin-right: 0.5em
+    }    
+
+    h2.headline > :nth-child(2n) {
+        font-size: 0;
+        opacity: 0;
+    }
 }
