proto 'boite d'informations'

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -40,3 +40,15 @@
         opacity: 0;
     }
 }
+
+dl {
+    border: thin solid black;
+    border-radius: 1em;
+    padding: 0.5em 1em;
+    background: AliceBlue;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+dl dt {
+    font-weight: bold;
+}
