--- a/_includes/nav-page.html
+++ b/_includes/nav-page.html
@@ -16,6 +16,7 @@
                </li>
                -->
                <li class="link"><a href="{{site.baseurl}}/contact/">contact</a></li>
+               <li class="link"><a href="{{site.baseurl}}/page-de-liens/">liens</a></li>
             </ul>
     </nav>
 </div>
