autre prototype pour la page de garde
1e ligne en 5-4-3

les 2 dernières lignes sont maintenant asymétriques en 7-5 et 5-7

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -211,6 +211,16 @@ pre {
     
 }
 
+.seven.columns.news-piece {
+    margin-left: 0;
+    width: 58.33333%;
+}
+
+.five.columns.news-piece {
+    margin-left: 0;
+    width: 41.66667%;
+}
+
 .four.columns.news-piece {
     margin-left: 0;
     width: 33.33333%;
